[package]
name = "verticareader"
version = "1.1.0"
authors = ["Joey Gibson <joey@joeygibson.com>"]
edition = "2018"
description = "A program to read Vertica native binary files and convert them to CSV."
readme = "README.md"
repository = "https://github.com/joeygibson/verticareader"
license = "MIT"
keywords = ["vertica", "database", "csv", "binary"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
chrono = "0.4"
csv = "1.1"
regex = "1"
lazy_static = "1.4.0"
