[package]
name = "verticareader"
version = "1.6.0"
authors = ["Joey Gibson <joey@joeygibson.com>"]
edition = "2018"
description = "A program to read Vertica native binary files and convert them to CSV."
readme = "README.md"
repository = "https://github.com/joeygibson/verticareader"
license = "MIT"
keywords = ["vertica", "database", "csv", "binary"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
chrono = "0.4"
csv = "1.1"
regex = "1.6"
lazy_static = "1.4.0"
serde_json = "1.0"
flate2 = "1.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

